syntax = "proto3";

package geo;

service GeoServices {
  rpc GetCountries (CountryRequest) returns (CountryResponse);
}

message CountryResponse {
    repeated Country Countries = 1;
}

message CountryRequest {

}

message Country {
    string id = 1;
    string name = 2;
}